--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-<!DOCTYPE html>
+function doGet(e) {
+  return HtmlService.createTemplateFromFile('xxx').evaluate()
+      .setTitle("web app")
+      .addMetaTag('viewport','width=device-width , initial-scale=1')
+      .setXFrameOptionsMode(HtmlService.XFrameOptionsMode.ALLOWALL)
+}
 
-<html>
-   <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-      <base target="_top">
-   </head>
-   <body>
-      <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;border: 0;" src="https://script.google.com/macros/s/AKfycbxTdDunUnD9Ht3lycM3O3X1wrGXX4ERl2i1JA6yNzJyh7CBgzxvreygkVgTgqAF4g/exec"></iframe>
-   </body>
+----------------------------------------------------------------
+<!doctype html>
+<html lang="th">
+<head>
+<meta charset="UTF-8"
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>web app</title>
+</head>
+<body>
+    <iframe style="height: 100vh;" src="https://script.google.com/macros/s/AKfycbxTdDunUnD9Ht3lycM3O3X1wrGXX4ERl2i1JA6yNzJyh7CBgzxvreygkVgTgqAF4g/exec" frameborder="0" width="100%" height="100%"></iframe>
+</body>
 </html>
