--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
-function doGet(e) {
-  return HtmlService.createTemplateFromFile('xxx').evaluate()
-      .setTitle("web app")
-      .addMetaTag('viewport','width=device-width , initial-scale=1')
-      .setXFrameOptionsMode(HtmlService.XFrameOptionsMode.ALLOWALL)
-}
-
-----------------------------------------------------------------
 <!doctype html>
 <html lang="th">
 <head>
 <meta charset="UTF-8"
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>web app</title>
+<title>ระบบเบิกใช้สารส้ม - คลอรีน</title>
 </head>
 <body>
     <iframe style="height: 100vh;" src="https://script.google.com/macros/s/AKfycbxTdDunUnD9Ht3lycM3O3X1wrGXX4ERl2i1JA6yNzJyh7CBgzxvreygkVgTgqAF4g/exec" frameborder="0" width="100%" height="100%"></iframe>
